# zenpnm

./: CLAUDE.md  Cargo.toml  justfile
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_roundtrip.rs
src/: decode.rs  encode.rs  error.rs  info.rs  lib.rs  pixel.rs  pixel_traits.rs  zencodec.rs
src/bmp/: decode.rs  encode.rs  mod.rs
src/pnm/: decode.rs  encode.rs  mod.rs
tests/: corpus.rs  rgb_imgref.rs  roundtrip.rs
