[package]
name = "zenpnm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "PNM/PAM/PFM image format decoder and encoder (P5, P6, P7, PFM) with optional basic BMP"
categories = ["multimedia::images"]
keywords = ["image", "pnm", "pam", "ppm", "pgm"]
repository = "https://github.com/imazen/zenpnm"
documentation = "https://docs.rs/zenpnm"
readme = "README.md"

[dependencies]
# Core (always available)
enough = "0.3"
imgref = { version = "1.12", default-features = false, optional = true }
rgb = { version = "0.8", default-features = false, features = ["as-bytes"], optional = true }
thiserror = { version = "2.0", default-features = false }
zencodec-types = { path = "../zencodec-types", optional = true }
linear-srgb = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
archmage = { version = "0.6", features = ["std"] }

[features]
default = []
std = []

# Format groups
basic-bmp = []   # Basic uncompressed 24/32-bit BMP (not auto-detected, explicit use only)

# Typed pixel support
rgb = ["dep:rgb"]              # RGB8, RGBA8 etc. typed pixel encode/decode
imgref = ["dep:imgref", "rgb"] # ImgVec/ImgRef 2D buffer support (implies rgb)

# zencodec-types trait integration
zencodec = ["dep:zencodec-types", "imgref", "rgb", "dep:linear-srgb"]

# All optional features
all = ["basic-bmp", "rgb", "imgref"]
